# omnipair-rs

./: .dockerignore  .env.example  .gitignore  .mocharc.json  .nycrc.json  Anchor.toml  Cargo.toml  Dockerfile  Dockerfile.fork-lab-api  Dockerfile.fork-lab-node  Dockerfile.fork-lab-rpc-proxy  LICENSE  LITESVM_COVERAGE.md  README.md  env.example  package-lock.json  package.json  tsconfig.json
decoders/omnipair-decoder/: Cargo.toml  README.md
decoders/omnipair-decoder/src/: lib.rs
decoders/omnipair-decoder/src/accounts/: futarchy_authority.rs  mod.rs  pair.rs  rate_model.rs  user_position.rs
decoders/omnipair-decoder/src/accounts/graphql/: futarchy_authority_schema.rs  mod.rs  pair_schema.rs  rate_model_schema.rs  user_position_schema.rs
decoders/omnipair-decoder/src/accounts/postgres/: futarchy_authority_row.rs  mod.rs  pair_row.rs  rate_model_row.rs  user_position_row.rs
decoders/omnipair-decoder/src/events/: adjust_collateral_event.rs  adjust_debt_event.rs  adjust_liquidity_event.rs  burn_event.rs  flashloan_event.rs  mint_event.rs  mod.rs  pair_created_event.rs  swap_event.rs  update_pair_event.rs  user_liquidity_position_updated_event.rs  user_position_created_event.rs  user_position_liquidated_event.rs  user_position_updated_event.rs
decoders/omnipair-decoder/src/graphql/: query.rs
decoders/omnipair-decoder/src/instructions/: add_collateral.rs  add_liquidity.rs  adjust_collateral_event.rs  adjust_liquidity_event.rs  borrow.rs  burn_event.rs  claim_protocol_fees.rs  claim_protocol_fees_event.rs  cpi_event.rs  distribute_tokens.rs  flashloan.rs  init_futarchy_authority.rs  initialize.rs  liquidate.rs  mint_event.rs  mod.rs  pair_created_event.rs  remove_collateral.rs  remove_liquidity.rs  repay.rs  set_global_reduce_only.rs  set_pair_reduce_only.rs  swap.rs  swap_event.rs  update_futarchy_authority.rs  update_pair_event.rs  update_protocol_revenue.rs  update_revenue_recipients.rs  user_liquidity_position_updated_event.rs  user_position_updated_event.rs  view_pair_data.rs  view_user_position_data.rs
decoders/omnipair-decoder/src/instructions/graphql/: add_collateral_schema.rs  add_liquidity_schema.rs  borrow_schema.rs  distribute_tokens_schema.rs  flashloan_schema.rs  init_futarchy_authority_schema.rs  initialize_schema.rs  mod.rs  remove_collateral_schema.rs  remove_liquidity_schema.rs  repay_schema.rs  swap_schema.rs  update_futarchy_authority_schema.rs  update_protocol_revenue_schema.rs  view_pair_data_schema.rs  view_user_position_data_schema.rs
decoders/omnipair-decoder/src/instructions/postgres/: add_collateral_row.rs  add_liquidity_row.rs  borrow_row.rs  claim_protocol_fees_row.rs  cpi_event_row.rs  distribute_tokens_row.rs  flashloan_row.rs  initialize_row.rs  (+11 more)
decoders/omnipair-decoder/src/types/: add_liquidity_args.rs  adjust_collateral_args.rs  adjust_collateral_event.rs  adjust_debt_args.rs  adjust_debt_event.rs  adjust_liquidity_event.rs  adjust_position_args.rs  burn_event.rs  claim_protocol_fees_event.rs  distribute_tokens_args.rs  emit_value_args.rs  event_metadata.rs  flashloan_args.rs  flashloan_event.rs  futarchy_authority.rs  init_futarchy_authority_args.rs  initialize_and_bootstrap_args.rs  last_price_e_m_a.rs  mint_event.rs  mod.rs  pair.rs  pair_created_event.rs  pair_view_kind.rs  rate_model.rs  remove_liquidity_args.rs  revenue_distribution.rs  revenue_recipients.rs  revenue_share.rs  set_global_reduce_only_args.rs  set_pair_reduce_only_args.rs  swap_args.rs  swap_event.rs  update_futarchy_authority_args.rs  update_pair_event.rs  update_protocol_revenue_args.rs  update_revenue_recipients_args.rs  user_liquidity_position_updated_event.rs  user_position.rs  user_position_created_event.rs  user_position_liquidated_event.rs  (+3 more)
examples/flashloan_receiver/: Cargo.toml  README.md
examples/flashloan_receiver/src/: lib.rs
programs/faucet/: Cargo.toml
programs/faucet/src/: lib.rs
programs/leverage/: Cargo.toml
programs/leverage/src/: constants.rs  errors.rs  instruction_math.rs  lib.rs  state.rs  types.rs  utils.rs
programs/leverage/src/instructions/: close_multiply.rs  flash_loan_callback.rs  mod.rs  multiply.rs
programs/leverage_delegate/: Cargo.toml
programs/leverage_delegate/src/: lib.rs
programs/omnipair/: Cargo.toml  build.rs
programs/omnipair/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/omnipair/src/instructions/: common.rs  commons.rs  emit_value.rs  factory_create_pair.rs  factory_get_pairs.rs  factory_initialize.rs  faucet_mint.rs  mod.rs  pair_add_liquidity.rs  pair_adjust_collateral.rs  pair_adjust_debt.rs  pair_adjust_liquidity.rs  pair_bootstrap.rs  pair_burn.rs  pair_flashloan.rs  pair_initialize.rs  pair_mint.rs  pair_remove_liquidity.rs  pair_skim.rs  pair_swap.rs  pair_sync.rs  pair_update_oracle.rs  pair_withdraw_liquidation_bond.rs  rate_model_create.rs
programs/omnipair/src/state/: factory.rs  futarchy_authority.rs  leverage_position.rs  mod.rs  pair.rs  pair_config.rs  rate_model.rs  user_position.rs
programs/omnipair/src/utils/: account.rs  calc.rs  ema.rs  gamm_math.rs  math.rs  mod.rs  rate_model.rs  router.rs  taylor_exp.rs  token.rs
tests/: Cargo.toml  README.md  basic.test.ts  create_rate_model.ts  futarchy.test.ts  liquidity_operations.ts  mod.rs  omnipair.rs  omnipair.ts
tests/src/: test_initialize.rs
tests/utils/: instruction-coverage.ts  litesvm-connection.ts  test-helpers.ts
trident-tests/: Cargo.toml  README.md  Trident.toml
trident-tests/fuzz/futarchy/: claim_protocol_fees.rs
trident-tests/fuzz/lending/: add_collateral.rs  mod.rs
trident-tests/fuzz/spot/: swap.rs
trident-tests/fuzz/view/: mod.rs
trident-tests/fuzz_lending/: fuzz_accounts.rs  test_fuzz.rs
trident-tests/fuzz_lending/lending/: repay.rs
trident-tests/fuzz_lending/view/: view_pair_data.rs  view_user_position_data.rs
trident-tests/fuzz_liquidity_swaps/: fuzz_accounts.rs  types.rs
trident-tests/fuzz_liquidity_swaps/futarchy/: distribute_tokens.rs  mod.rs
trident-tests/fuzz_liquidity_swaps/lending/: liquidate.rs  remove_collateral.rs
trident-tests/fuzz_liquidity_swaps/liquidity/: mod.rs
(+204 files in other folders)
