[workspace]
members = [
    "programs/omnipair",
    "programs/faucet",
    "examples/flashloan_receiver",
    "decoders/omnipair-decoder",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
