[package]
name = "omnipair-tests"
version = "0.1.0"
description = "Integration tests for Omnipair"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "omnipair_tests"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
anchor-client = "0.29.0"
anchor-lang = "0.29.0" 