[package]
name = "flashloan-receiver-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flashloan_receiver_example"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
