[package]
name = "omnipair-leverage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "omnipair_leverage"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "event-cpi", "derive"] }
anchor-spl = { version = "0.31.1" }
omnipair = { path = "../omnipair", features = ["cpi"] }
