[package]
name = "omnipair"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "omnipair"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
cpi-no-ix = ["cpi", "no-log-ix-name"]
no-spl-memo = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
production = []
development = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed", "event-cpi", "derive"] }
anchor-spl = { version = "0.31.0", features = ["metadata"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"
num-traits = "0.2.19"
spl-memo = "4.0.0"
uint = "0.9.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.0"
rand = "0.8.5"